--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "mysql2": "^3.9.7",
     "nodemon": "^3.1.0",
     "pg": "^8.11.5",
-"pg-hstore": "^2.3.4",
+    "pg-hstore": "^2.3.4",
+    "react-scripts": "^5.0.1",
     "reflect-metadata": "^0.2.2",
     "sequelize": "^6.37.3",
-    "typeorm": "^0.3.20",
-    "react-scripts": "^5.0.0"
+    "typeorm": "^0.3.20"
   }
 }
